@@ -40,8 +40,8 @@
 #include "freeipmi/ipmi-sensor-cmds.h"
 #include "freeipmi/ipmi-sensor-and-event-code-tables.h"
 #include "freeipmi/ipmi-sensor-types-spec.h"
-#include "freeipmi/ipmi-sensor-util.h"
 #include "freeipmi/api/ipmi-sensor-cmds-api.h"
+#include "freeipmi/util/ipmi-sensor-util.h"
 
 #include "freeipmi-portability.h"
 
