@@ -1,6 +1,6 @@
 >dnl Process this file with autoconf to produce a configure script.
 AC_INIT([freeipmi],[0.5.0.beta3],[freeipmi-devel@gnu.org])
-AC_REVISION([$Id: configure.ac,v 1.97.2.10 2007-12-11 19:04:33 chu11 Exp $])
+AC_REVISION([$Id: configure.ac,v 1.97.2.11 2007-12-13 19:14:14 chu11 Exp $])
 AM_INIT_AUTOMAKE([1.8])
 
 dnl We require a modern autoconf and automake
@@ -18,10 +18,11 @@ AC_CONFIG_FILES([
 	common/Makefile common/doc/Makefile common/src/Makefile
         libfreeipmi/Makefile libfreeipmi/include/Makefile 
 	libfreeipmi/src/Makefile 
+        libfreeipmi/src/api/Makefile
         libfreeipmi/src/debug/Makefile
         libfreeipmi/src/driver/Makefile
         libfreeipmi/src/locate/Makefile
-        libfreeipmi/src/api/Makefile
+        libfreeipmi/src/util/Makefile
         bmc-watchdog/Makefile bmc-watchdog/src/Makefile
         ipmipower/Makefile ipmipower/src/Makefile
 	ipmiconsole/Makefile ipmiconsole/src/Makefile
