@@ -47,20 +47,20 @@
 
 #include "freeipmi/api/ipmi-api.h"
 #include "freeipmi/ipmi-authentication-type-spec.h"
-#include "freeipmi/ipmi-cipher-suite-util.h"
 #include "freeipmi/ipmi-kcs-interface.h"
 #include "freeipmi/ipmi-messaging-support-cmds.h"
 #include "freeipmi/ipmi-lan-interface.h"
 #include "freeipmi/ipmi-privilege-level-spec.h"
 #include "freeipmi/ipmi-rmcpplus-interface.h"
-#include "freeipmi/ipmi-util.h"
 #include "freeipmi/rmcp-interface.h"
+#include "freeipmi/api/ipmi-messaging-support-cmds-api.h"
 #include "freeipmi/debug/ipmi-debug.h"
 #include "freeipmi/driver/ipmi-kcs-driver.h"
 #include "freeipmi/driver/ipmi-openipmi-driver.h"
 #include "freeipmi/driver/ipmi-ssif-driver.h"
 #include "freeipmi/locate/ipmi-locate.h"
-#include "freeipmi/api/ipmi-messaging-support-cmds-api.h"
+#include "freeipmi/util/ipmi-cipher-suite-util.h"
+#include "freeipmi/util/ipmi-util.h"
 
 #include "ipmi-ctx.h"
 #include "ipmi-err-wrappers-api.h"
