@@ -38,8 +38,8 @@ extern "C" {
 #include "freeipmi/fiid.h"
 #include "freeipmi/ipmi-comp-code-spec.h"
 #include "freeipmi/ipmi-error.h"
-#include "freeipmi/ipmi-util.h"
 #include "freeipmi/api/ipmi-api.h"
+#include "freeipmi/util/ipmi-util.h"
 
 #include "ipmi-err-wrappers.h"
 
