@@ -30,11 +30,11 @@
 
 #include "freeipmi/debug/ipmi-debug.h"
 #include "freeipmi/ipmi-rmcpplus-interface.h"
-#include "freeipmi/ipmi-rmcpplus-util.h"
 #include "freeipmi/ipmi-crypt.h"
 #include "freeipmi/ipmi-lan-interface.h"
 #include "freeipmi/ipmi-sol-cmds.h"
 #include "freeipmi/rmcp-interface.h"
+#include "freeipmi/util/ipmi-rmcpplus-util.h"
 
 #include "ipmi-debug-common.h"
 
