@@ -35,8 +35,8 @@
 #include "freeipmi/ipmi-messaging-support-cmds.h"
 #include "freeipmi/ipmi-netfn-spec.h"
 #include "freeipmi/ipmi-slave-address-spec.h"
-#include "freeipmi/ipmi-util.h"
 #include "freeipmi/rmcp-interface.h"
+#include "freeipmi/util/ipmi-util.h"
 
 #include "ipmi-err-wrappers.h"
 #include "ipmi-fiid-wrappers.h"
