@@ -28,13 +28,13 @@
 #endif /* STDC_HEADERS */
 #include <errno.h>
 
-#include "freeipmi/ipmi-lan-util.h"
+#include "freeipmi/util/ipmi-lan-util.h"
 #include "freeipmi/ipmi-authentication-type-spec.h"
 #include "freeipmi/ipmi-lan-interface.h"
 #include "freeipmi/ipmi-messaging-support-cmds.h"
 #include "freeipmi/ipmi-netfn-spec.h"
-#include "freeipmi/ipmi-util.h"
 #include "freeipmi/rmcp-interface.h"
+#include "freeipmi/util/ipmi-util.h"
 
 #include "ipmi-err-wrappers.h"
 #include "ipmi-fiid-wrappers.h"
