@@ -25,7 +25,7 @@
 #include <math.h>
 #include <errno.h>
 
-#include "freeipmi/ipmi-sensor-util.h"
+#include "freeipmi/util/ipmi-sensor-util.h"
 #include "freeipmi/ipmi-sdr-record-format.h"
 #include "freeipmi/ipmi-sensor-units-spec.h"
 
